# src/backendApp/src/Interface/Controller/Sudoku/Dto/InstanceGetResponseDto.php
@@ -6,6 +6,7 @@ use App\Application\Service\Dto\AbstractDto;
 use App\Application\Service\Dto\Attribute\ArrayItemType;
 use App\Domain\Sudoku\Service\Dto\CellGroupDto;
 use App\Domain\Sudoku\Service\Dto\CellRowCollectionDto;
+use App\Domain\Sudoku\ValueObject\CellCoords;
 use Symfony\Component\Validator\Constraints as Assert;
 
 class InstanceGetResponseDto extends AbstractDto
@@ -13,14 +14,15 @@ class InstanceGetResponseDto extends AbstractDto
     #[Assert\NotBlank]
     public string $id;
 
-    /**
-     * @var array<CellRowCollectionDto> $cells
-     */
-    #[Assert\All([
-        new Assert\Type(type: CellRowCollectionDto::class)
-    ])]
-    #[ArrayItemType(CellRowCollectionDto::class)]
-    public array $cells;
+//    /**
+//     * @var array<CellRowCollectionDto> $puzzle
+//     */
+//    #[Assert\All([
+//        new Assert\Type(type: CellRowCollectionDto::class)
+//    ])]
+//    #[ArrayItemType(CellRowCollectionDto::class)]
+    /** @var array<string, int> $puzzle */
+    public array $puzzle;
 
     /**
      * @var array<CellGroupDto> $groups
@@ -30,4 +32,14 @@ class InstanceGetResponseDto extends AbstractDto
     ])]
     #[ArrayItemType(CellGroupDto::class)]
     public array $groups;
+
+    /**
+     * @var array<string, int> $cellValues
+     */
+    public array $cellValues;
+
+    /**
+     * @var array<string, array<int>> $notes
+     */
+    public array $notes;
 }
